tests/error/13.desc
Compilation error - invalid string expression